Grouped the pagination and the sort by filter component to have them on the same line using flex. The sort by filter is position abosolute and on the right side of the page and the pagination stays in the center of the screen. Had an issue where the sort by menu was overlapping with the server list, but just added some z-index to the server list to cover over the sort by.

--- a/src/components/navigation/server-list/server-list.scss
+++ b/src/components/navigation/server-list/server-list.scss
@@ -19,6 +19,7 @@
     justify-content: center;
     align-items: center;
     font-family: $main-font;
+    z-index: 99;
 }
 
 .data-center-list {
