--- a/src/components/recipes-list/pagination/pagination.scss
+++ b/src/components/recipes-list/pagination/pagination.scss
@@ -4,6 +4,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    margin: auto;
+    padding: 0;
 
     button {
         list-style-type: none;
