--- a/src/components/recipes-list/recipes-list.scss
+++ b/src/components/recipes-list/recipes-list.scss
@@ -14,6 +14,16 @@
     width: 100%;
     min-height: 100vh;
 }
+#pagination-and-filter {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    position: relative;
+    margin-bottom: 20px;
+}
 
 .loading-spinner {
     @include loader;
