--- a/src/util/_variables.scss
+++ b/src/util/_variables.scss
@@ -10,7 +10,7 @@ $faded-brown: #473c2a46;
 $gold: #c9ad7a;
 
 // Font Family
-$main-font: ff-font;
+$ff-font: ff-font;
 $main-font: staatliches;
 
 @font-face {
